--- a/src/components/Jumbotron.css
+++ b/src/components/Jumbotron.css
@@ -5,9 +5,9 @@
 
 .jumbotron{
     object-fit: cover;
-    height: 620px;
-    background-image: url("../images/projectsJumbo.jpg");
-    background-position: center;
+    height: 450px;
+    background-image: url(../images/aboutMe.jpg);
+    background-position: 0% 90%;
     background-repeat: no-repeat;
     background-size: 100% auto;
     color: white;
