--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -34,7 +34,7 @@ transform: translate(-50%, -50%);
 }
 
 .cardBtn {
-background-color:#3726c9;
+background-color:#1d4382;
 color: white;
 font-size: 16px;
 padding: 10px 22px;
@@ -43,4 +43,16 @@ padding: 10px 22px;
 .cardBtn:hover {
     color: white;
     padding: 12px 26px;
+}
+
+.projectCard {
+    margin-left: 4%;
+    margin-right: 1%;
+    margin-bottom: 2%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.projectCard:hover {
+box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
