new modal content

--- a/src/components/ProjectModal.css
+++ b/src/components/ProjectModal.css
@@ -5,3 +5,16 @@
 .processContainer {
     margin: 3%;
 }
+
+.blue {
+    color: #1d4382;
+}
+
+h6 {
+    margin-bottom: -3%;
+    color: #1d4382;
+}
+
+.modal-content {
+    padding: 3%;
+}
