--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,7 +1,3 @@
-.cardImg {
-object-fit: cover;
-}
-
 .cardImgContainer:hover .cardImg {
 opacity: 0.3;
 }
@@ -12,6 +8,7 @@ opacity: 1;
 
 .cardImgContainer {
 position: relative;
+margin-bottom: 3%;
 }
 
 .cardImg {
@@ -21,6 +18,7 @@ width: 100%;
 height: auto;
 transition: .5s ease;
 backface-visibility: hidden;
+object-fit: cover;
 }
 
 .middle {
@@ -59,4 +57,8 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
 .keysP {
     color: #1d4382;
+}
+
+.cardh3 {
+    color: #1d4382
 }
