--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,10 +3,12 @@
     height: 50px;
     margin-top: 15px;
 }
+
 .page-footer{
   background-color: #1d4382;
   height: 20%;
   padding-top: 0.5%;
+  width: 100%;
 }
 
 .footer-copyright{
@@ -25,6 +27,19 @@
 .footlead{
   font-size: 130%;
   margin-top: 2%;
+  color: white;
+}
+
+.footlinkeda {
+  font-size: 120%;
+  color: white;
+}
+
+.footlinkeda:hover {
+  color: white;
+}
+
+.footmail {
   color: white;
 }
 
