--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -44,9 +44,8 @@ padding: 10px 22px;
 }
 
 .projectCard {
-    margin-left: 4%;
-    margin-right: 1%;
-    margin-bottom: 4%;
+    margin: 2%;
+
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
