--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -59,5 +59,10 @@ box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .cardh3 {
-    color: #1d4382
+    color: #1d4382;
+    cursor: "pointer";
+}
+
+.cardh3a {
+    cursor: "pointer";
 }
