--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -16,7 +16,7 @@ font-size: 18px;
 color: #1d4382;
 }
 
-a:hover {
+#navbarNav a:hover {
   border-bottom: 2px solid #1d4382;
   font-weight: 500
 }
